fixed prev button to be hiden behind the picture...

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,11 +27,13 @@ body {
 }
 .imgButton_Previous {
   left: 0;
-  position: absolute;
+  top: 48%;
+  position: fixed;
 }
 .imgButton_Next {
   right: 0;
-  position: absolute;
+  top: 48%;
+  position: fixed;
 }
 .imageContainer {
   max-width: 80%;
